name:             hackage-jsonp
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

Flag Static
        Description: Build static binaries
        Default: False

executable hackage-jsonp
  ghc-options:
      -Wall -Werror -fno-warn-orphans
  if flag(Static)
    ghc-options: -static -optl-static -optl-pthread                           
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base
    , old-time
    , containers
    , bytestring
    , transformers
    , aeson
    , conduit
    , http-conduit
    , http-types
    , Cabal
    , tar
    , zlib
    , filepath
    , directory
    , unix

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-orphans
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base
    , old-time
    , containers
    , bytestring
    , transformers
    , aeson
    , conduit
    , http-conduit
    , http-types
    , Cabal
    , tar
    , zlib
    , filepath
    , directory
    , unix

    -- test suite specific
    , hspec
    , stringbuilder
