name:             hackagelog
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

executable hackagelog
  ghc-options:
      -Wall
      -Werror
  build-depends:
      base
    , old-time
    , containers
    , bytestring
    , transformers
    , aeson
    , conduit
    , http-conduit
    , http-types
  main-is:
      Main.hs

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
      -Werror
  build-depends:
      base
    , old-time
    , containers
    , bytestring
    , transformers
    , aeson
    , conduit
    , http-conduit
    , http-types
    , stringbuilder
    , hspec-shouldbe
  main-is:
      Spec.hs
